Projeto Padaria Imperial - V1.O.1

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Padaria Imperial - A melhor padaria de Campinas</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css">
-</head>
-<body>
-    <img src="Imagens/Icon.png" alt="Abrir Menu" id="menuBtn">
-    <img src="Imagens/Icon-Fechar.png" alt="Fechar Menu" id="fecharBtn">
-    <div id="container">
-        <header>
-            <img src="Imagens/Logo.png" alt="Logo Padaria Imperial">
-            <nav>
+<!DOCTYPE html> <!--HTML 5-->
+<html lang="pt-br"> <!--INICIO DO HTML em PT-BR-->
+<head> <!--INICIO das TAGS de METADADOS-->
+    <meta charset="UTF-8"> <!--CADEIA DE CARATERES UNIVERSAL-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--RESPONSIVIDADE-->
+    <title>Padaria Imperial - A melhor padaria de Campinas</title> <!--TITULO do NAVEGADOR-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--IMPORTA a FONTE DO GOOGLE-->
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"><!--IMPORTA a FONTE DO GOOGLE-->
+    <link rel="stylesheet" href="CSS/style.css"> <!--IMPORTA o CSS-->
+</head> <!--FIM das TAGS de METADADOS-->
+<body> <!--INICIO do CONTEÚDO HTML-->
+    <img src="Imagens/Icon.png" alt="Abrir Menu" id="menuBtn"> <!--BOTÃO HAMBURGUER-->
+    <img src="Imagens/Icon-Fechar.png" alt="Fechar Menu" id="fecharBtn"> <!--BOTÃO FECHAR-->
+    <div id="container"> <!--INICIO do CONTAINER-->
+        <header> <!--INICIO do CABEÇALHO-->
+            <img src="Imagens/Logo.png" alt="Logo Padaria Imperial"> <!--LOGOTIPO-->
+            <!--INICIO do MENU DE NAVEGAÇÃO-->
+            <nav> 
                 <ul id="menu">
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">QUEM SOMOS</a></li>
@@ -22,23 +23,24 @@
                     <li><a href="#">CONTATO</a></li>
                 </ul>
             </nav>
-        </header>
-        <main>
-            <article class="artigo_home">
-                <img src="Imagens/Pao.jpg" alt="Pão" id="destaque_home">
-                <h1>Bem Vindo</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus voluptatem dolore assumenda repellat velit aut alias modi in a, autem qui ea quaerat quasi itaque adipisci perspiciatis saepe vero.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus voluptatem dolore assumenda repellat velit aut alias modi in a, autem qui ea quaerat quasi itaque adipisci perspiciatis saepe vero.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nemo illum dignissimos repellendus repellat placeat, voluptatum eaque perferendis doloribus, voluptates minus aut soluta quos deserunt aperiam, corrupti debitis sit ipsam.</p>
-            </article>
-        </main>
-        <footer>
-            <h2>Fale com a gente</h2>
-            <p>Telefone 11 9999-9999</p>
-            <a href="https://instagram.com">@padariaImperial</a>
-            <a href="mailto:contato@padariaimperial.com.br">Email: contato@padariaimperial.com.br</a>
-        </footer>
-        <script src="JS/script.js"></script>
-    </div>
-</body>
-</html>
+            <!--FIM do MENU DE NAVEGAÇÃO-->
+        </header> <!--FIM do CABEÇALHO-->
+        <main> <!--CONTEÚDO PRINCIPAL-->
+            <article class="artigo_home"> <!--ARTIGO-->
+                <img src="Imagens/Pao.jpg" alt="Pão" id="destaque_home"> <!--IMAGEM do PÃO-->
+                <h1>Bem Vindo</h1> <!--TÍTULO da PÁGINA-->
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus voluptatem dolore assumenda repellat velit aut alias modi in a, autem qui ea quaerat quasi itaque adipisci perspiciatis saepe vero.</p> <!--PARÁGRAFO-->
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus voluptatem dolore assumenda repellat velit aut alias modi in a, autem qui ea quaerat quasi itaque adipisci perspiciatis saepe vero.</p> <!--PARÁGRAFO-->
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nemo illum dignissimos repellendus repellat placeat, voluptatum eaque perferendis doloribus, voluptates minus aut soluta quos deserunt aperiam, corrupti debitis sit ipsam.</p><!--PARÁGRAFO-->
+            </article> <!--FIM do ARTIGO-->
+        </main> <!--FIM do CONTEÚDO PRINCIPAL-->
+        <footer> <!--INICIO do RODAPÉ da PÁGINA-->
+            <h2>Fale com a gente</h2> <!--TITULO do FOOTER-->
+            <p>Telefone 11 9999-9999</p> <!--TELEFONE-->
+            <a href="https://instagram.com">@padariaImperial</a> <!--INSTAGRAM-->
+            <a href="mailto:contato@padariaimperial.com.br">Email: contato@padariaimperial.com.br</a> <!--EMAIL da PADARIA-->
+        </footer><!--FIM do RODAPÉ-->
+        <script src="JS/script.js"></script> <!--IMPORTA o JAVASCRIPT-->
+    </div><!--FIM do CONTAINER-->
+</body><!--FIM do CONTEÚDO HTML-->
+</html> <!--FIM do HTML-->
