Projeto Padaria Imperial - V1.O.2

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
             <article class="artigo_home"> <!--ARTIGO-->
                 <img src="Imagens/Pao.jpg" alt="Pão" id="destaque_home"> <!--IMAGEM do PÃO-->
                 <h1>Bem Vindo</h1> <!--TÍTULO da PÁGINA-->
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus voluptatem dolore assumenda repellat velit aut alias modi in a, autem qui ea quaerat quasi itaque adipisci perspiciatis saepe vero.</p> <!--PARÁGRAFO-->
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus voluptatem dolore assumenda repellat velit aut alias modi in a, autem qui ea quaerat quasi itaque adipisci perspiciatis saepe vero.</p> <!--PARÁGRAFO-->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nemo illum dignissimos repellendus repellat placeat, voluptatum eaque perferendis doloribus, voluptates minus aut soluta quos deserunt aperiam, corrupti debitis sit ipsam.</p><!--PARÁGRAFO-->
+                <p>Bem-vindo a padaria Imperial!
+                    Aqui, nós oferecemos uma grande variedade de pães fresquinhos, bolos deliciosos, doces incríveis e salgados que vão te deixar com água na boca.</p> <!--PARÁGRAFO-->
+                <p>Explore o nosso site para conhecer os nossos produtos e descobrir as nossas ofertas especiais. Faça a sua encomenda online e deixe que a nossa equipe prepare tudo para você. Ou, se preferir, venha até a nossa padaria e experimente as nossas delícias fresquinhas diretamente do balcão.</p> <!--PARÁGRAFO-->
+                <p>A imperial é muito mais do que uma simples padaria. É um lugar onde você pode encontrar sabor, qualidade e atendimento excepcional. Esperamos vê-lo em breve!</p><!--PARÁGRAFO-->
             </article> <!--FIM do ARTIGO-->
         </main> <!--FIM do CONTEÚDO PRINCIPAL-->
         <footer> <!--INICIO do RODAPÉ da PÁGINA-->
