Projeto Padaria Imperial - V1.O.3

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"> <!--CADEIA DE CARATERES UNIVERSAL-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--RESPONSIVIDADE-->
     <title>Padaria Imperial - A melhor padaria de Campinas</title> <!--TITULO do NAVEGADOR-->
+    <link rel="shortcut icon" href="Imagens/Logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--IMPORTA a FONTE DO GOOGLE-->
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"><!--IMPORTA a FONTE DO GOOGLE-->
     <link rel="stylesheet" href="CSS/style.css"> <!--IMPORTA o CSS-->
